# codspeed-demo

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: benchmarks.yml
codspeed_demo/: __init__.py  algorithms.py
tests/: test_benchmarks.py
