[project]
name = "codspeed-demo"
version = "0.1.0"
description = "Demo project for learning CodSpeed benchmarking"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-codspeed>=4.2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
